# lyra-chat-router-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/admin/: __init__.py  auth.py  router.py
app/audit/: logger.py  redaction.py
app/core/: config.py
app/db/: __init__.py  session.py
app/db/migrations/: 001_initial.sql
app/delivery/: __init__.py  ledger.py
app/googlechat/: auth.py  normalizer.py  router.py  schemas.py
app/handlers/: analytics.py  deny.py  direct_reply.py  openclaw_agent_hook.py  openclaw_forward.py  openclaw_forwarder.py  scoped_operation.py
app/policies/: defaults.py  engine.py  intents.py  registry.py
app/pubsub/: router.py
deploy/: DEPLOY_CHECKLIST.md  GATE_6_RUNBOOK.md  PUBSUB_EVENTS_RUNBOOK.md  delivery_watchdog.py  nginx.location.example  postgres.bootstrap.example.sql  smoke_test.sh  systemd.service.example
tests/: test_admin.py  test_googlechat_addon_payload.py  test_googlechat_auth.py  test_googlechat_no_trailing_slash.py  test_health.py  test_normalizer.py  test_openclaw_agent_hook.py  test_policy_engine.py  test_pubsub_events.py  test_router.py
tests/fixtures/: googlechat_message.json
