[project]
name = "lyra-chat-router-api"
version = "0.1.0"
description = "Independent Google Chat router API for Lyra"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.0",
  "google-auth>=2.0",
  "requests>=2.31",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "tests*"]

[tool.ruff]
line-length = 100
